滚动条修改

--- a/version2.0/static/css/main.css
+++ b/version2.0/static/css/main.css
@@ -7,9 +7,9 @@
   font-size: 14px;
 }
 body{
-  overflow-x: hidden;
+  overflow-x: hidden!important;
 }
-html,body{height:100%;overflow:hidden}
+html,body{height:100%;overflow:hidden!important;}
 a{
   text-decoration: none;
 }
