--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,244 @@
 
-<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+<div class="intro-banner-wrap"
+     style="width: 100%; height: 450px; position: relative; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+  <img class="intro-banner-img" src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg" alt=""
+       style="position: absolute; top: 0px; left: 50%; display: block; width: 1920px; height: 100%; transform: translateX(-50%); z-index: 10;">
+  <div class="intro-banner-img-mask"
+       style="position: absolute; width: 100%; height: 100%; top: 0px; left: 0px; background: rgb(0, 0, 0); opacity: 0.45; z-index: 15;"></div>
+  <div class="intro-banner-text"
+       style="position: relative; z-index: 99; width: 1200px; color: rgb(255, 255, 255);"><h2
+    class="intro-banner-title" style="font-weight: 400; font-size: 50px; line-height: 70px;">智慧社区，未来生活</h2>
+    <p class="intro-banner-subtitle"
+       style="margin-top: 8px; margin-bottom: 48px; max-width: 768px; font-size: 16px; line-height: 25px;">
+      输出支付，账户体系，信用金融，电商，采购，文化公益和大数据等能力和资源，助力社区物业通过提升信息化、智能化水平，改善物业管理水平和服务品质，推动建设便利舒适、安全和谐的智慧社区</p></div>
+</div>
+
+<div class="hy-ability"
+     style="font-family: &quot;Microsoft YaHei&quot;; height: 223px; text-align: center; background: rgb(255, 255, 255);">
+  <div class="hy-ability-item"
+       style="display: inline-block; width: 280px; margin: 38px 35px 0px; vertical-align: top;"><img alt=""
+                                                                                                     src="https://gw.alipayobjects.com/zos/rmsportal/aWimbMGxabytxrRqcnEU.svg"
+                                                                                                     style="height: 62px;">
+    <h3
+      style="font-size: 20px; line-height: 26px; color: rgb(51, 51, 51); font-weight: 400; margin: 18px 0px 10px;">
+      能力输出</h3>
+    <p style="font-size: 16px; color: rgb(153, 153, 153); line-height: 21px;">支付、实名、信用、理财、大数据</p></div>
+  <div class="hy-ability-item"
+       style="display: inline-block; width: 280px; margin: 38px 35px 0px; vertical-align: top;"><img alt=""
+                                                                                                     src="https://gw.alipayobjects.com/zos/rmsportal/neNAdNbBxUbWpbUQIsJA.svg"
+                                                                                                     style="height: 62px;">
+    <h3
+      style="font-size: 20px; line-height: 26px; color: rgb(51, 51, 51); font-weight: 400; margin: 18px 0px 10px;">
+      政策扶持</h3>
+    <p style="font-size: 16px; color: rgb(153, 153, 153); line-height: 21px;">物料、返佣、品牌支持、运营收益</p></div>
+  <div class="hy-ability-item"
+       style="display: inline-block; width: 280px; margin: 38px 35px 0px; vertical-align: top;"><img alt=""
+                                                                                                     src="https://gw.alipayobjects.com/zos/rmsportal/SsStefBxcUWayMyktAwz.svg"
+                                                                                                     style="height: 62px;">
+    <h3
+      style="font-size: 20px; line-height: 26px; color: rgb(51, 51, 51); font-weight: 400; margin: 18px 0px 10px;">
+      资源整合</h3>
+    <p style="font-size: 16px; color: rgb(153, 153, 153); line-height: 21px;">门禁停车、智能家居、生活服务</p></div>
+</div>
+
+<div class="scenario-column"><h3>应用场景</h3>
+  <div class="scenario-slider ">
+    <div class="scenario-list">
+      <div data-index="0" class="scenario-item selected"><img
+        src="https://gw.alipayobjects.com/zos/rmsportal/buKnoKlvQeEzYxttqrFh.svg" alt=""><img class="selected"
+                                                                                              src="https://gw.alipayobjects.com/zos/rmsportal/MnBlZZrbYBdVvXrCOyfW.svg"
+                                                                                              alt=""><h4>物业缴费</h4>
+        <p>提升缴费效率</p></div>
+      <div data-index="1" class="scenario-item  "><img
+        src="https://gw.alipayobjects.com/zos/rmsportal/BdPVAfibJHPeFvZIcsTr.svg" alt=""><img class="selected"
+                                                                                              src="https://gw.alipayobjects.com/zos/rmsportal/NqHbRYuggzIiBJTZOCfa.svg"
+                                                                                              alt=""><h4>
+        小区生活号</h4>
+        <p>物业运营阵地</p></div>
+      <div data-index="2" class="scenario-item  "><img
+        src="https://gw.alipayobjects.com/zos/rmsportal/ZDqQbDUiGLDzygPQIMxp.svg" alt=""><img class="selected"
+                                                                                              src="https://gw.alipayobjects.com/zos/rmsportal/rHxglRXhjrhTOgRfqrah.svg"
+                                                                                              alt=""><h4>社区理财</h4>
+        <p>提升现金管理收益</p></div>
+    </div>
+  </div>
+  <div class="scenario-detail-list bt1px">
+    <div class="scenario-detail-item selected">
+      <div class="scenario-detail-left"><h4>物业缴费</h4>
+        <p>用户可通过“支付宝—生活缴费—物业费，选择自己的房间号后即可查询相关费用并进行缴费；支持在线付、扫码付和代扣等</p>
+        <ul class="scenario-ability-list">
+          <li><h5 class="ability-title">场景价值</h5>
+            <p class="ability-desc">为业主提供简单的缴费服务 <br>为物业降低催收成本、提升缴费效率</p></li>
+          <li><h5 class="ability-title">包含产品能力</h5>
+            <div class="ability-real-row"><span class="circle-item blue-circle">线上缴费 </span><span
+              class="circle-item-spacing"></span><span class="circle-item blue-circle">当面付</span><span
+              class="circle-item-spacing"></span></div>
+          </li>
+          <li><h5 class="ability-title">关联产品能力</h5>
+            <div class="ability-real-row"><span class="circle-item ">账单提醒</span><span
+              class="circle-item-spacing"></span><span class="circle-item ">余利宝 </span><span
+              class="circle-item-spacing"></span><span class="circle-item ">资金清算</span><span
+              class="circle-item-spacing"></span><span class="circle-item ">电子发票</span><span
+              class="circle-item-spacing"></span></div>
+          </li>
+          <li><h5 class="ability-title">合作门槛及要求</h5>
+            <p class="ability-desc">1、商务能力：有物业行业资源和客户 <br>2、开发能力：有系统开发和对接能力<br> 3、服务能力：有物业公司的运营活动和地推引导等服务运营能力</p>
+          </li>
+        </ul>
+      </div>
+      <div class="scenario-detail-right"><img
+        src="https://gw.alipayobjects.com/zos/rmsportal/ATrmyVCFsdLJlliHBppp.png" alt=""></div>
+    </div>
+    <div class="scenario-detail-item  ">
+      <div class="scenario-detail-left"><h4>小区生活号<a href=""></a></h4>
+        <p>以生活号为阵地，接入各项业务，搭建智慧社区运营阵地。可以通过此平台对用户进行信息推送、服务输出、交易场景打通和会员关系管理； 支持：自定义扩展区、自定义菜单、用户标签、消息推送</p>
+        <ul class="scenario-ability-list">
+          <li><h5 class="ability-title">场景价值</h5>
+            <p class="ability-desc">为物业公司低成本搭建一个个性化的APP，实现物业品牌露出和形象传播；<br>智慧社区持续的运营阵地，实现服务与用户的连接；<br>借助自身的能力、资源以及第三方资源丰富了业主服务内容；<br>生态各方的协作与专业分工，为业主提供更好服务，实现生态共赢
+            </p></li>
+          <li><h5 class="ability-title">包含产品能力</h5>
+            <div class="ability-real-row"><span class="circle-item blue-circle">生活号</span><span
+              class="circle-item-spacing"></span></div>
+          </li>
+          <li><h5 class="ability-title">关联产品能力</h5>
+            <div class="ability-real-row"><span class="circle-item ">业主卡</span><span
+              class="circle-item-spacing"></span><span class="circle-item ">小程序</span><span
+              class="circle-item-spacing"></span><span class="circle-item ">圈子</span><span
+              class="circle-item-spacing"></span></div>
+          </li>
+          <li><h5 class="ability-title">合作门槛及要求</h5>
+            <p class="ability-desc">1、有一定的开发能力，有物业行业合作经验的服务商<br>2、有一定的运营能力，可以进行线上线下的运营活动、地推引导</p></li>
+        </ul>
+      </div>
+      <div class="scenario-detail-right"><img
+        src="https://gw.alipayobjects.com/zos/rmsportal/qhiRAOVMONMMircrVhJB.png" alt=""></div>
+    </div>
+    <div class="scenario-detail-item  ">
+      <div class="scenario-detail-left"><h4>社区理财<a href=""></a></h4>
+        <p>物业公司在收到物业费停车费等相关费用后，直接发起余利宝的申购，能享受理财收益，待需要费用支出时，再从余利宝中赎回，将资金付给相关人员</p>
+        <ul class="scenario-ability-list">
+          <li><h5 class="ability-title">场景价值</h5>
+            <p class="ability-desc">物业公司：零门槛享受互联网理财服务；获得相对低风险的稳定理财收益；同时保持资金的充分流动性；<br>合作伙伴：与风险理财产品的对接，增强自身方案的完整性，降低物业公司的合作成本，增强市场竞争力；
+            </p></li>
+          <li><h5 class="ability-title">包含产品能力</h5>
+            <div class="ability-real-row"><span class="circle-item blue-circle">余利宝</span><span
+              class="circle-item-spacing"></span></div>
+          </li>
+          <li><h5 class="ability-title">合作门槛及要求</h5>
+            <p class="ability-desc">已开通企业支付宝账号及相关认证<br><br><br><br></p></li>
+        </ul>
+      </div>
+      <div class="scenario-detail-right"><img
+        src="https://gw.alipayobjects.com/zos/rmsportal/ySkOyTnwEMufrSgxRSyq.png" alt=""></div>
+    </div>
+  </div>
+  <div class="scenario-actions selected"><a class="scenario-action primary" href="#">立即接入</a><a
+    class="scenario-action secondary" href="#">查看接入指南</a></div>
+  <div class="scenario-actions  "><a class="scenario-action primary" href="#">立即接入</a><a
+    class="scenario-action secondary" href="#">查看接入指南</a></div>
+  <div class="scenario-actions  "><a class="scenario-action primary" href="#">立即接入</a><a
+    class="scenario-action secondary" href="#">接入指南</a></div>
+</div>
+
+<div style="background: rgb(255, 255, 255); min-width: 1280px;">
+  <div style="padding-top: 47px; padding-bottom: 40px; text-align: center; width: 1200px; margin: 0px auto;"><h3
+    style="position: relative; font-family: &quot;Microsoft YaHei&quot;; font-size: 26px; line-height: 40px; color: rgb(153, 153, 153); font-weight: 400; vertical-align: middle; margin-bottom: 40px;">
+    第三方服务推荐<a href="#"
+              style="position: absolute; right: 0px; top: 12px; color: rgb(16, 142, 233); font-size: 14px; line-height: 18px; font-weight: 400; text-decoration: none;">查看更多服务</a>
+  </h3>
+    <div style="position: relative; height: 400px; margin: 0px; padding: 0px;">
+      <div
+        style="z-index: 0; font-size: 0px; position: absolute; left: 0px; top: 0px; width: 100%; display: block; transition: opacity 0.3s linear;">
+        <div
+          style="display: inline-block; vertical-align: top; width: 270px; height: 400px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+          <img src="https://gw.alipayobjects.com/zos/rmsportal/geocpIkIixaGovHECTdw.svg" alt=""
+               style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
+          <h5
+            style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">
+            付呗物业</h5>
+          <p style="font-size: 14px; color: rgb(51, 51, 51); line-height: 20px;">已售：<span
+            style="color: rgb(16, 142, 233); font-weight: 500;">474</span></p>
+          <p
+            style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">
+            解决社区物业缴费中遇到的难题，实现物业线上缴费，公告触达，服务线上申请，财务分析，提供独立的互联网+社区平台</p><a href="#"
+                                                                         style="margin-top: 15px; display: inline-block; padding: 5px 37px; font-size: 14px; color: rgb(16, 142, 233); border: 1px solid rgb(16, 142, 233); border-radius: 4px; transition: all 0.2s linear;">免费接入</a>
+        </div>
+        <div
+          style="display: inline-block; vertical-align: top; width: 270px; height: 400px; border-radius: 2px 2px 0px 0px; margin: 0px 20px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+          <img src="https://gw.alipayobjects.com/zos/rmsportal/kMXuMYkLTCSkTnzoiRxs.png" alt=""
+               style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
+          <h5
+            style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">
+            邻易联</h5>
+          <p style="font-size: 14px; color: rgb(51, 51, 51); line-height: 20px;">已售：<span
+            style="color: rgb(16, 142, 233); font-weight: 500;">206</span></p>
+          <p
+            style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">
+            为物业公司提供智慧管理平台，帮助物业提升缴费率，有效解决物业“成本高、服务难改善、盈利渠道少”等难题</p><a href="#"
+                                                                     style="margin-top: 15px; display: inline-block; padding: 5px 37px; font-size: 14px; color: rgb(16, 142, 233); border: 1px solid rgb(16, 142, 233); border-radius: 4px; transition: all 0.2s linear;">免费接入</a>
+        </div>
+        <div
+          style="display: inline-block; vertical-align: top; width: 270px; height: 400px; border-radius: 2px 2px 0px 0px; margin: 0px 20px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+          <img src="https://gw.alipayobjects.com/zos/rmsportal/TpqeamkGvHuXSWKsLOth.png" alt=""
+               style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
+          <h5
+            style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">
+            云筑社区综合管理平台</h5>
+          <p style="font-size: 14px; color: rgb(51, 51, 51); line-height: 20px;">已售：<span
+            style="color: rgb(16, 142, 233); font-weight: 500;">287</span></p>
+          <p
+            style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">
+            基于互联网、物联网、大数据、云计算的物业管理平台，轻松接入，免安装维护</p><a href="#"
+                                                      style="margin-top: 15px; display: inline-block; padding: 5px 37px; font-size: 14px; color: rgb(16, 142, 233); border: 1px solid rgb(16, 142, 233); border-radius: 4px; transition: all 0.2s linear;">免费接入</a>
+        </div>
+        <div
+          style="display: inline-block; vertical-align: top; width: 270px; height: 400px; border-radius: 2px 2px 0px 0px; margin: 0px 0px 0px 20px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+          <img src="https://gw.alipayobjects.com/zos/rmsportal/ykkPpNnSjuqpqBhxjTir.png" alt=""
+               style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
+          <h5
+            style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">
+            橙子生活</h5>
+          <p style="font-size: 14px; color: rgb(51, 51, 51); line-height: 20px;">已售：<span
+            style="color: rgb(16, 142, 233); font-weight: 500;">5</span></p>
+          <p
+            style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">
+            助力物业转型升级，轻松实现线上缴费，公告触达，报修响应。解决物业收费难、服务感知度低、收入来源单一等难题</p><a href="#"
+                                                                       style="margin-top: 15px; display: inline-block; padding: 5px 37px; font-size: 14px; color: rgb(16, 142, 233); border: 1px solid rgb(16, 142, 233); border-radius: 4px; transition: all 0.2s linear;">免费接入</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="hy-friends-list"><a href="javascript:" class="hy-friends-item selected" data-index="0"><img alt=""
+                                                                                                        class="hy-friends-img"
+                                                                                                        src="https://gw.alipayobjects.com/zos/rmsportal/CdqiMTPofpGZyLcJkDHX.jpg">
+  <h4>南都物业</h4><span>适用场景：物业缴费</span>
+  <p>南都物业公司在接入支付宝在线物业缴费渠道之后，线上线下推广支付宝在线缴费上线一个月后，缴费日均超过200笔，大幅提升了缴费效率</p><img alt="" class="hy-friends-qr"
+                                                                             src="https://gw.alipayobjects.com/zos/rmsportal/MhShJeukuJNkenGytSiq.svg"></a><a
+  href="javascript:" class="hy-friends-item " data-index="1"><img alt="" class="hy-friends-img"
+                                                                  src="https://gw.alipayobjects.com/zos/rmsportal/ZWoRmVSYImddLaRYyQog.jpg">
+  <h4>金地物业</h4><span>适用场景：小区主页，物业缴费</span>
+  <p>金地物业借助生活号打造智慧社区，整合资源，引入各项服务与资源，从而增加收入，同时积累大批关注用户，实现了良性循环</p><img alt="" class="hy-friends-qr"
+                                                                      src="https://gw.alipayobjects.com/zos/rmsportal/cONkAwDeKdlzkcgchJLT.png"></a><a
+  href="javascript:" class="hy-friends-item " data-index="2"><img alt="" class="hy-friends-img"
+                                                                  src="https://gw.alipayobjects.com/zos/rmsportal/MHiDpDgUNShsjTCQXKKd.jpg">
+  <h4>宋都阳光</h4><span>适用场景：智能门禁</span>
+  <p>基于年轻人“手机不离身”的特点，安装智能门禁，外部人员出入记录线上化，提升访客通行速度，减少手工登记环节，提升了小区的整体安全性，规范管理流程，实现了物业与业主的共赢</p><img alt=""
+                                                                                                 class="hy-friends-qr"
+                                                                                                 src="https://gw.alipayobjects.com/zos/rmsportal/cONkAwDeKdlzkcgchJLT.png"></a><a
+  href="javascript:" class="hy-friends-item " data-index="3"><img alt="" class="hy-friends-img"
+                                                                  src="https://gw.alipayobjects.com/zos/rmsportal/JQBQcVBtAiyTGINHQNzh.jpg">
+  <h4>融侨物业</h4><span>适用场景：物业缴费、物业理财</span>
+  <p>接入支付宝的物业缴费和余利宝等功能，物业费自动转入余利宝，上线2个月，余利宝的日均余额超过200万元，按照7日年化4%的收益，年度收益达到8万元</p><img alt="" class="hy-friends-qr"
+                                                                                      src="https://gw.alipayobjects.com/zos/rmsportal/cONkAwDeKdlzkcgchJLT.png"></a>
+</div>
+
 
 <script>
-  $.ajax({
-    url: 'http://localhost:3000/test',
-    success: function (data) {
-      console.log(data);
-    }
-  });
+  $(function () {
+    $('.hy-friends-item').click(function () {
+      $(this).addClass('selected').siblings().removeClass('selected');
+    })
+  })
 </script>
