--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>{{title}}</title>
+  <head>
+    <meta charset="utf-8">
+    <title>{{title}}</title>
+    <meta name="keywords" content="颂车金融,颂车网,送车,二手车,一手车,新能源车,物流车,贷款买车,分期买车"/>
+    <meta name="description"
+          content="颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，于 2017 年 7 月正式上线。我们致力于为用户提供优质车源和配套金融服务的同时提供全新、无压力的用车服务体验。打造以汽车交易、汽车出行、汽车生活、车主金融等一系列综合服务的智慧生态圈。"/>
+    <link rel="stylesheet" href="/css/index.css"/>
+    <script src="/js/jquery-1.8.3.min.js"></script>
+  </head>
 </head>
 <body>
-  {{{body}}}
+
+<div id="ice-container">
+  <div class="ice-layout ice-blank-layout" style="min-height: 100vh;">
+    <div style="width: 100%; min-width: 1280px;">
+      {{>header}}
+      {{{body}}}
+      {{>footer}}
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
