--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -1,25 +1,34 @@
 
-<div class="header-container">
-  <div class="header-content">
-    <div class="logo" style="height: 32px; color: rgb(255, 68, 0); text-align: left;">
-      <a href="/" style="display: block; position: relative;">
-        <img src="/img/logo.png" width="129" height="35" alt="logo">
-      </a>
-    </div>
-    <div class="header-navbar">
-      <ul class="ice-menu ice-menu-horizontal header-navbar-menu ice-menu-light ice-menu-root" role="menu"
-          aria-activedescendant="" tabindex="0">
-        <li class="ice-menu-item" role="menuitem" aria-selected="false"><a
-          href="https://alibaba.github.io/ice/docs/ice-design">设计</a></li>
-        <li class="ice-menu-item" role="menuitem" aria-selected="false"><a
-          href="https://alibaba.github.io/ice/docs/about">文档</a></li>
-        <li class="ice-menu-item" role="menuitem" aria-selected="false"><a>物料 <i
-          class="next-icon next-icon-arrow-down-filling next-icon-xxs arrow-down-filling-icon"></i></a></li>
-        <li class="ice-menu-item" role="menuitem" aria-selected="false"><a>工具 <i
-          class="next-icon next-icon-arrow-down-filling next-icon-xxs arrow-down-filling-icon"></i></a></li>
-        <li class="ice-menu-item" role="menuitem" aria-selected="false"><a>社区 <i
-          class="next-icon next-icon-arrow-down-filling next-icon-xxs arrow-down-filling-icon"></i></a></li>
-      </ul>
-    </div>
+<div class="common-header-wrap fixed">
+  <div class="common-header">
+    <a href="/" class="logo"><img src="img/logo.png" alt=""></a>
+    <ul class="menu">
+      <li>
+        <a href="/">首页</a>
+      </li>
+      <li>
+        <a href="/newslist">颂车资讯</a>
+      </li>
+      <li>
+        <a href="/about">关于颂车<i class="next-icon next-icon-arrow-down-filling next-icon-xxs arrow-down-filling-icon"></i></a>
+        <div class="next-balloon next-balloon-normal next-balloon-medium next-balloon-top next-overlay-inner header-balloon-content next-position-tc">
+          <a href="/about#enterpriseprofile" class="custom-sub-menu">企业简介</a>
+          <a href="/about#enterpriseculture" class="custom-sub-menu">企业文化</a>
+          <a href="/about#enterprisevision" class="custom-sub-menu">企业愿景</a>
+          <a href="/about#developmentmileage" class="custom-sub-menu">发展里程</a>
+          <a href="/about#officeenvironment" class="custom-sub-menu">办公环境</a>
+          <a href="/about#joinus" class="custom-sub-menu">加入我们</a>
+          <a href="/about#contactus" class="custom-sub-menu">联系我们</a>
+        </div>
+      </li>
+      <li>
+        <a href="/joinus">招商加盟<i class="next-icon next-icon-arrow-down-filling next-icon-xxs arrow-down-filling-icon"></i></a>
+        <div class="next-balloon next-balloon-normal next-balloon-medium next-balloon-top next-overlay-inner header-balloon-content next-position-tc">
+          <a href="/joinus#bright" class="custom-sub-menu">五大亮点</a>
+          <a href="/joinus#advantage" class="custom-sub-menu">十大优势</a>
+          <a href="/joinus#franchiseprocess" class="custom-sub-menu">加盟流程</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
