--- a/public/css/joinus.css
+++ b/public/css/joinus.css
@@ -53,8 +53,8 @@ a.supply-join {
 }
 
 .section2 dl {
-  padding-top: 30px;
-  padding-right: 80px;
+  /*padding-top: 30px;*/
+  /*padding-right: 80px;*/
 }
 
 .section2 dt {
