--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -26,6 +26,7 @@
         <div class="next-balloon next-balloon-normal next-balloon-medium next-balloon-top next-overlay-inner header-balloon-content next-position-tc">
           <a href="/joinus#bright" class="custom-sub-menu">五大亮点</a>
           <a href="/joinus#advantage" class="custom-sub-menu">十大优势</a>
+          <a href="/joinus#franchiseconditions" class="custom-sub-menu">加盟条件</a>
           <a href="/joinus#franchiseprocess" class="custom-sub-menu">加盟流程</a>
         </div>
       </li>
