--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/swiper.min.css">
     <script src="/js/jquery-1.8.3.min.js"></script>
     <script src="/js/swiper.min.js"></script>
+    <script src="/js/layer/layer.js"></script>
+    <script src="/js/axios.min.js"></script>
     <script src="/js/common.js"></script>
   </head>
 </head>
