--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,23 +5,22 @@
 <!-- Swiper -->
 <div class="swiper-container">
   <div class="swiper-wrapper">
-    <div class="swiper-slide"><img src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg" alt=""></div>
-    <div class="swiper-slide"><img src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg" alt=""></div>
+    <div class="swiper-slide"><img src="/img/banner/about.jpg" alt=""></div>
   </div>
   <!-- Add Pagination -->
-  <div class="swiper-pagination"></div>
+  <!--<div class="swiper-pagination"></div>-->
   <!-- Add Arrows -->
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
+  <!--<div class="swiper-button-next"></div>-->
+  <!--<div class="swiper-button-prev"></div>-->
 </div>
 
 <div class="content">
   <div class="row row1">
     <a href="" title="" name="aboutus"></a>
     <div class="containter">
-      <div class="head-title">
-          <h1>拥抱车联网，是我们的宗旨</h1>
-      </div>
+      <!--<div class="head-title">-->
+          <!--<h1>拥抱车联网，是我们的宗旨</h1>-->
+      <!--</div>-->
 
       <a href="" title="" name="enterpriseprofile"></a>
       <div class="about-grid clearfix">
@@ -29,35 +28,39 @@
           <div class="title-wrap">
             <div class="title">
               <h1>企业简介</h1>
-              <p>Enterprise Profile</p>
+              <p>Company Profile</p>
             </div>
           </div>
           <div class="company-info">
             <div class="summary">
-              <p>这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容</p>
+              <p>颂车网是一家专注于为用户提供一站式用车、出行服务的车联网平台，我们秉承“美好车生活·快乐享出行”的理念，致力于为用户提供优质车源和配套金融服务的同时提供全新、无压力的用车服务体验。</p>
+              <p>颂车网打造以颂车交易、颂车出行、颂车社交、颂车汽后、颂车车生活、颂车金融、颂车商城等一系列综合服务的智慧生态圈。颂车网于 2017 年 7 月12日，总部设立于重庆，目前服务覆盖14个省市自治区。</p>
             </div>
           </div>
         </div>
-        <div class="image left">
-          <img  src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg"  alt=""/>
+        <div style="margin-top: 50px" class="image left">
+          <img  src="/img/about/about-1.png"  alt=""/>
         </div>
       </div>
 
       <a href="" title="" name="enterpriseculture"></a>
       <div class="about-grid clearfix">
-        <div class="image right">
-          <img  src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg"  alt=""/>
+        <div style="margin-top: 40px" class="image right">
+          <img  src="/img/about/about-2.png"  alt=""/>
         </div>
         <div class="text left">
           <div class="title-wrap">
             <div class="title">
               <h1>企业文化</h1>
-              <p>Enterprise Culture</p>
+              <p>Corporate Culture</p>
             </div>
           </div>
           <div class="company-info">
-            <div class="summary">
-              <p>这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容</p>
+            <div class="summary center">
+              <p>价值观：<br />
+                创业精神：激情、创新、使命必达！<br />
+                办事原则：共情、共担、共享！<br />
+                人际关系：简单、阳光、积极向上！</p>
             </div>
           </div>
         </div>
@@ -74,12 +77,13 @@
           </div>
           <div class="company-info">
             <div class="summary">
-              <p>这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容这是介绍内容</p>
+              <p>做中国最大最佳用户体验的诚信平台；打造一站式用车、出行服务平台，让用车、出行更美好！</p>
+              <p>提供集社交、租赁出行、汽车交易、金融、商城、汽后、车生活版块等全面生态圈服务，美好车生活、快乐享出行！</p>
             </div>
           </div>
         </div>
-        <div class="image left">
-          <img  src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg"  alt=""/>
+        <div style="margin-top: 40px" class="image left">
+          <img  src="/img/about/about-3.png"  alt=""/>
         </div>
       </div>
 
@@ -91,19 +95,19 @@
   <div class="row row3">
     <div class="containter">
       <a href="" title="" name="environment"></a>
-      <div class="title-wrap">
+      <div class="title-wrap" style="height: 160px">
         <div class="title">
           <h1>发展里程</h1>
           <p>Development Mileage</p>
         </div>
       </div>
       <div class="company-info">
-        <div class="summary">
-          <p>这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述</p>
+        <div class="summary center">
+          <p>不忘初心，戮力前行！</p>
         </div>
       </div>
       <div class="img-inf">
-        <img  src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg"  alt=""/>
+        <img  src="/img/about/about-4.png"  alt=""/>
       </div>
     </div>
   </div>
@@ -112,19 +116,19 @@
   <div class="row row3">
     <div class="containter">
       <a href="" title="" name="environment"></a>
-      <div class="title-wrap">
+      <div class="title-wrap" style="height: 160px">
         <div class="title">
           <h1>办公环境</h1>
           <p>Office Environment</p>
         </div>
       </div>
       <div class="company-info">
-        <div class="summary">
-          <p>这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述</p>
+        <div class="summary center">
+          <p>温馨、舒适，美好的一天从这里开始！</p>
         </div>
       </div>
       <div class="img-inf">
-        <img  src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg"  alt=""/>
+        <img  src="/img/about/about-5.png"  alt=""/>
       </div>
     </div>
   </div>
@@ -132,15 +136,15 @@
   <a href="" title="" name="joinus"></a>
   <div class="row row6">
     <div class="containter">
-      <div class="title-wrap">
+      <div class="title-wrap" style="height: 160px">
         <div class="title">
           <h1>加入我们</h1>
           <p>Join Us</p>
         </div>
       </div>
       <div class="company-info">
-        <div class="summary">
-          <p>这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述这是简单描述</p>
+        <div class="summary center">
+          <p>加入颂车网，一起实现梦想！</p>
         </div>
       </div>
       <br />
@@ -447,10 +451,15 @@
   <a href="" title="" name="contactus"></a>
   <div class="row row7">
     <div class="containter">
-      <div class="title-wrap">
+      <div class="title-wrap" style="height: 160px;">
         <div class="title">
           <h1>联系我们</h1>
           <p>Contact Us</p>
+        </div>
+      </div>
+      <div class="company-info">
+        <div class="summary center">
+          <p>颂车网竭诚为您提供优质服务！</p>
         </div>
       </div>
       <div class="contact">
@@ -458,56 +467,60 @@
           <ul>
             <li class="mail">
               <span class="fl"></span>
-              <div class="img-box fl"></div>
-              <div class="fl">
-                <h1 class="mark">HR邮箱</h1>
-                <p>hr@ilanshang.com</p>
-              </div>
-            </li>
-            <li class="phone">
-              <span class="fl"></span>
-              <div class="img-box fl"></div>
+              <div style="background: url('/img/about/icon-2.png') no-repeat " class="img-box fl"></div>
               <div class="fl">
                 <h1 class="mark">招聘电话</h1>
-                <p>0592-5996137</p>
+                <p>023-89699638、023--89699617</p>
+              </div>
+            </li>
+            <li class="mail">
+              <span class="fl"></span>
+              <div style="background: url('/img/about/icon-1.png') no-repeat " class="img-box fl"></div>
+              <div class="fl">
+                <h1 class="mark">招聘邮箱</h1>
+                <p>heml@songcw.com、zhangl@songcw.com</p>
               </div>
             </li>
             <li class="web">
               <span class="fl"></span>
-              <div class="img-box fl"></div>
+              <div style="background: url('/img/about/icon-3.png') no-repeat "  class="img-box fl"></div>
               <div class="fl">
-                <h1>
-                  <a class="mark" target="_blank" href="http://www.lagou.com/gongsi/33841.html"
-                     title="">拉勾网招聘主页</a>
-                </h1>
+                <h1 class="mark">地址</h1>
+                <p>重庆市渝中区化龙桥华盛路10号企业天地2号楼8楼</p>
               </div>
             </li>
           </ul>
         </div>
         <div class="fl col2">
           <ul>
-            <li class="qq">
+            <li class="phone">
               <span class="fl"></span>
-              <div class="img-box fl"></div>
+              <div style="background: url('/img/about/icon-4.png') no-repeat " class="img-box fl"></div>
               <div class="fl">
-                <h1 class="mark">腾讯QQ</h1>
-                <p>招聘QQ：1840787599</p>
+                <h1>
+                  <a class="mark" target="_blank" href="https://hr.lagou.com/company/gongsi/339568.html"
+                     title="">拉勾网主页</a>
+                </h1>
               </div>
             </li>
-            <li class="address">
+            <li class="phone">
               <span class="fl"></span>
-              <div class="img-box fl"></div>
+              <div style="background: url('/img/about/icon-5.png') no-repeat " class="img-box fl"></div>
               <div class="fl">
-                <h1 class="mark">公司地址</h1>
-                <p>福建省厦门市软件园二期望海路23号之三406</p>
+                <h1>
+                  <a class="mark" target="_blank" href="https://www.liepin.com/ecompany/preview/?ecompId=9539592"
+                     title="">猎聘网主页</a>
+                </h1>
               </div>
             </li>
-            <li class="mail-code">
+            <li class="phone">
               <span class="fl"></span>
-              <div class="img-box fl"></div>
+              <div style="background: url('/img/about/icon-6.png') no-repeat " class="img-box fl"></div>
               <div class="fl">
-                <h1 class="mark">邮编</h1>
-                <p>361009</p>
+                <h1>
+                  <a class="mark" target="_blank" href="https://company.zhaopin.com/CZ715392740.htm"
+                     title="">智联主页</a>
+                </h1>
               </div>
             </li>
           </ul>
@@ -515,9 +528,9 @@
       </div>
     </div>
   </div>
-  <div class="row row8">
-    <div id="map"></div>
-  </div>
+  <!--<div class="row row8">-->
+    <!--<div id="map"></div>-->
+  <!--</div>-->
 </div>
 
 <script>
