--- a/views/newslist.hbs
+++ b/views/newslist.hbs
@@ -4,14 +4,13 @@
 <!-- Swiper -->
 <div class="swiper-container">
   <div class="swiper-wrapper">
-    <div class="swiper-slide"><img src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg" alt=""></div>
-    <div class="swiper-slide"><img src="https://img.alicdn.com/tfs/TB1R9Ius1uSBuNjy1XcXXcYjFXa-3840-900.jpg" alt=""></div>
+    <div class="swiper-slide"><img src="/img/banner/news.jpg" alt=""></div>
   </div>
   <!-- Add Pagination -->
-  <div class="swiper-pagination"></div>
+  <!--<div class="swiper-pagination"></div>-->
   <!-- Add Arrows -->
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
+  <!--<div class="swiper-button-next"></div>-->
+  <!--<div class="swiper-button-prev"></div>-->
 </div>
 
 <div class="news-list-box clearfix">
