--- a/views/common/footer.hbs
+++ b/views/common/footer.hbs
@@ -9,29 +9,14 @@
           <div style="width: 208px; box-sizing: border-box;">
             <div
               style="font-size: 22px; color: rgb(255, 255, 255); padding-bottom: 20px; box-sizing: border-box;">
-              新手入门
+              相关链接
             </div>
             <div>
               <ul>
                 <li
                   style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
                   <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">新手指南</a>
-                </li>
-                <li
-                  style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
-                  <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">热门FAQ</a>
-                </li>
-                <li
-                  style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
-                  <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">合作攻略</a>
-                </li>
-                <li
-                  style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
-                  <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">平台规则</a>
+                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">壹号源商城</a>
                 </li>
               </ul>
             </div>
@@ -42,29 +27,29 @@
           <div style="width: 208px; box-sizing: border-box;">
             <div
               style="font-size: 22px; color: rgb(255, 255, 255); padding-bottom: 20px; box-sizing: border-box;">
-              服务支持
+              相关下载
             </div>
             <div>
               <ul>
                 <li
                   style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
                   <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">开发文档</a>
+                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">颂车App</a>
                 </li>
                 <li
                   style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
                   <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">业务文档</a>
+                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;"></a>
                 </li>
                 <li
                   style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
                   <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">物料模板下载</a>
+                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;"></a>
                 </li>
                 <li
                   style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
                   <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">开放日</a>
+                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;"></a>
                 </li>
               </ul>
             </div>
@@ -82,12 +67,7 @@
                 <li
                   style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
                   <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">技术支持中心</a>
-                </li>
-                <li
-                  style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
-                  <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">在线问答</a>
+                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">帮助中心</a>
                 </li>
               </ul>
             </div>
@@ -105,7 +85,7 @@
                 <li
                   style="padding-top: 14px; white-space: normal; word-break: break-all; overflow: hidden; box-sizing: border-box; list-style: none;">
                   <a href="#"
-                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">点此与我联系</a>
+                     style="font-size: 16px; color: rgb(255, 255, 255); opacity: 0.6; text-decoration: none;">023-88888888</a>
                 </li>
               </ul>
             </div>
@@ -121,14 +101,14 @@
       </div>
       <div
         style="padding-top: 12px; font-size: 14px; color: rgb(255, 255, 255); box-sizing: border-box; opacity: 0.6;">
-        加入钉钉群
+        颂车公众号
       </div>
       <div style="padding-top: 12px; font-size: 14px; color: rgb(255, 255, 255); box-sizing: border-box;"><img
         src="https://img.alicdn.com/tfs/TB1J2tnuKSSBuNjy0FlXXbBpVXa-1060-1086.png" alt=""
         style="width: 97px; height: 97px; border: 0px; box-sizing: border-box;"></div>
       <div
         style="padding-top: 12px; font-size: 14px; color: rgb(255, 255, 255); box-sizing: border-box; opacity: 0.6;">
-        打开钉钉扫一扫
+        扫一扫，立马关注
       </div>
     </div>
     <div style="display: block; height: 0px; box-sizing: border-box; clear: both;"></div>
